# School21-Filler

./: .gitignore  CMakeLists.txt  Makefile  ojessi.filler  one_map
ft_printf/includes/: ft_printf.h
ft_printf/src/: ft_strlen.c
includes/: filler.h  ft_printf.h  libft.h
libft/: Makefile  ft_bzero.c
libft/includes/: get_next_line.h  libft.h
ojessi.filler.dSYM/Contents/: Info.plist
ojessi.filler.dSYM/Contents/Resources/DWARF/: ojessi.filler
resources/: filler.trace  test
src/: algor.c  heapmap.c  main.c  parse_param.c  paste_fig.c  read.c
visual/: Makefile  visualizator
visual/includes/: filler.h  ft_printf.h  visualizator.h
visual/src/: draw.c  draw2.c  draw3.c  key_hook.c  keyhook.c  list_fun.c  main.c  parse_fig.c  read.c  read_params.c  smth.c  visu.c
visual/visualizator.dSYM/Contents/: Info.plist
visual/visualizator.dSYM/Contents/Resources/DWARF/: visualizator
