cmake_minimum_required(VERSION 3.13)
project(Filler)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(ft_printf)
include_directories(ft_printf/includes)
include_directories(ft_printf/src)
include_directories(includes)
include_directories(libft)
include_directories(libft/includes)
include_directories(resources)
include_directories(resources/maps)
include_directories(resources/players)
include_directories(src)

add_executable(Filler
        ft_printf/includes/ft_printf.h
        ft_printf/src/check_args.c
        ft_printf/src/choise_spec.c
        ft_printf/src/ft_free_strncpy.c
        ft_printf/src/ft_printf.c
        ft_printf/src/init_arg.c
        ft_printf/src/print_digit.c
        ft_printf/src/print_double.c
        ft_printf/src/print_non_printabl.c
        ft_printf/src/print_spec.c
        ft_printf/src/print_spec_etc.c
        ft_printf/src/print_xox.c
        ft_printf/src/settings.c
        ft_printf/Makefile
        includes/filler.h
        includes/ft_printf.h
        includes/libft.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/ft_abs.c
        libft/ft_absf.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_count_words.c
        libft/ft_free_join.c
        libft/ft_free_strjoin_duo.c
        libft/ft_free_strjoin_rev.c
        libft/ft_frtwarr.c
        libft/ft_ftoa.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_isspace.c
        libft/ft_itoa.c
        libft/ft_list_add.c
        libft/ft_list_foreach_if.c
        libft/ft_list_push_back.c
        libft/ft_list_remove_free_if.c
        libft/ft_lstadd.c
        libft/ft_lstaddback.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_ltoa.c
        libft/ft_ltoa_base.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_pow.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_setbackground_fd.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strrev.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_truncf.c
        libft/ft_ultoa.c
        libft/ft_ultoa_base.c
        libft/get_next_line.c
        libft/ft_strtolower.c
        libft/Makefile
        resources/maps/map00
        resources/maps/map01
        resources/maps/map02
        resources/players/abanlin.filler
        resources/players/carli.filler
        resources/players/champely.filler
        resources/players/grati.filler
        resources/players/hcao.filler
        resources/players/superjeannot.filler
        resources/filler.trace
        resources/filler_vm
        resources/test
        src/main.c
        src/read.c
        src/algor.c
        src/heapmap.c
        Makefile
        one_map)
