cmake_minimum_required(VERSION 3.14)
project(Filler C)

set(CMAKE_C_STANDARD 11)

include_directories(ft_printf/includes)
include_directories(includes)
include_directories(libft/includes)
include_directories(Visual/includes)
include_directories(Visual/minilibx)

add_executable(Filler
        ft_printf/includes/ft_printf.h
        ft_printf/src/check_args.c
        ft_printf/src/choise_spec.c
        ft_printf/src/ft_atoi.c
        ft_printf/src/ft_free_strjoin_duo.c
        ft_printf/src/ft_free_strjoin_rev.c
        ft_printf/src/ft_free_strncpy.c
        ft_printf/src/ft_ftoa.c
        ft_printf/src/ft_itoa.c
        ft_printf/src/ft_ltoa.c
        ft_printf/src/ft_ltoa_base.c
        ft_printf/src/ft_memset.c
        ft_printf/src/ft_printf.c
        ft_printf/src/ft_strchr.c
        ft_printf/src/ft_strdup.c
        ft_printf/src/ft_strjoin.c
        ft_printf/src/ft_strlen.c
        ft_printf/src/ft_strncmp.c
        ft_printf/src/ft_strnew.c
        ft_printf/src/ft_strtolower.c
        ft_printf/src/ft_ultoa.c
        ft_printf/src/ft_ultoa_base.c
        ft_printf/src/init_arg.c
        ft_printf/src/print_digit.c
        ft_printf/src/print_double.c
        ft_printf/src/print_non_printabl.c
        ft_printf/src/print_spec.c
        ft_printf/src/print_spec_etc.c
        ft_printf/src/print_xox.c
        ft_printf/src/settings.c
        includes/filler.h
        includes/ft_printf.h
        includes/libft.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/ft_abs.c
        libft/ft_absf.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_count_words.c
        libft/ft_free_join.c
        libft/ft_free_strjoin_duo.c
        libft/ft_free_strjoin_rev.c
        libft/ft_frtwarr.c
        libft/ft_ftoa.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_isspace.c
        libft/ft_itoa.c
        libft/ft_list_add.c
        libft/ft_list_foreach_if.c
        libft/ft_list_push_back.c
        libft/ft_list_remove_free_if.c
        libft/ft_lstadd.c
        libft/ft_lstaddback.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_ltoa.c
        libft/ft_ltoa_base.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_pow.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_setbackground_fd.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strrev.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtolower.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_truncf.c
        libft/ft_ultoa.c
        libft/ft_ultoa_base.c
        libft/get_next_line.c
        src/algor.c
        src/heapmap.c
        src/main.c
        src/read.c
        Visual/includes/mlx.h
        Visual/includes/visualizator.h
        Visual/minilibx/test/main.c
        Visual/minilibx/test/new_win.c
        Visual/minilibx/mlx.h
        Visual/minilibx/mlx_clear_window.c
        Visual/minilibx/mlx_destroy_image.c
        Visual/minilibx/mlx_destroy_window.c
        Visual/minilibx/mlx_expose_hook.c
        Visual/minilibx/mlx_flush_event.c
        Visual/minilibx/mlx_get_color_value.c
        Visual/minilibx/mlx_get_data_addr.c
        Visual/minilibx/mlx_hook.c
        Visual/minilibx/mlx_init.c
        Visual/minilibx/mlx_int.h
        Visual/minilibx/mlx_int_anti_resize_win.c
        Visual/minilibx/mlx_int_do_nothing.c
        Visual/minilibx/mlx_int_get_visual.c
        Visual/minilibx/mlx_int_param_event.c
        Visual/minilibx/mlx_int_set_win_event_mask.c
        Visual/minilibx/mlx_int_str_to_wordtab.c
        Visual/minilibx/mlx_int_wait_first_expose.c
        Visual/minilibx/mlx_key_hook.c
        Visual/minilibx/mlx_lib_xpm.c
        Visual/minilibx/mlx_loop.c
        Visual/minilibx/mlx_loop_hook.c
        Visual/minilibx/mlx_mouse_hook.c
        Visual/minilibx/mlx_new_image.c
        Visual/minilibx/mlx_new_window.c
        Visual/minilibx/mlx_pixel_put.c
        Visual/minilibx/mlx_put_image_to_window.c
        Visual/minilibx/mlx_rgb.c
        Visual/minilibx/mlx_string_put.c
        Visual/minilibx/mlx_xpm.c
        Visual/src/main.c)
